# Validador_de_cadastros

./: .gitignore  README.md  auto-py-to-exe_configs.json  instalador.bat  main.py  pyproject.toml  requeriments.txt  requirements.txt  teste.py  validador_de_cadastros.bat
Modulos/: __init__.py  arquivo.py  busca_cep.py  configs.py  configuracoes.py  constants.py  data_hora_br.py  funcoes_main.py  funcoes_sanitizacao.py  imagens.py  imprimir.py  log_panel.py  models.py  place_holder.py  registro_de_sorteios.py
Modulos/janelas/: __init__.py  janela_retratil.py  janela_sorteios.py  janeladeimpressao.py  janelapadrao.py  janelaregistrodevencedor.py  janelas.py  paineldelogs.py
Modulos/models/: __init__.py  janelas.py  produto.py  sorteio.py  tabelas.py
configuracoes/: configuracoes.json
csv_teste/: Testando.csv  inscrições_filtradas.csv  rd-intelbras-lp-itec-sorteio-evento-lancamentos-outubro.csv  sorteio 11.csv
icons/: ref.txt
src/: cpf_cnpj.py  data_hora_br.py  telefone_celular.py
src/Contracts/: serializer.py
src/Models/: model.py
src/Schemas/: counters.py  employee.py  event_parameters.py  participants.py
src/Serializers/: csvserializer.py  excelserializer.py
src/WorkersBrewery/: __init__.py  workersbrewery.py
tests/: test_model.py
