[tool.poetry]
name = "validador-de-cadastros"
version = "0.1.0"
description = ""
authors = ["EFSCode"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
pillow = "^10.2.0"
validate-docbr = "^1.10.0"
win32printing = "^0.1.3"
ttkbootstrap = "^1.10.1"


[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.42.0"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
compile = { cmd = "auto-py-to-exe -c auto-py-to-exe_configs.json -lang pt_br ", help = "runs all tests" }
